# fennil

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.rst  README.md  README.rst  pyproject.toml
.github/workflows/: test_and_release.yml
bundles/desktop/: README.md  run.py
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
bundles/docker/setup/: apps.yml  requirements.txt
data/0000000157/: model_block.csv  model_meshes.csv  model_segment.csv  remaining.json
data/0000000226/: config.json  model_block.csv  model_meshes.csv  model_mogi.csv  model_segment.csv  model_station.csv
examples/jupyter/: show.ipynb
src/fennel/app/: core.py
src/fennil/app/: core.py  core2.py  data.py  fields.py  file_browser.py  geo.py  geo_projs.py  io.py  layers.py  main.py  registry.py  state.py
src/fennil/app/components/: __init__.py  file_browser.py  file_browser_origin.py  folder_controls.py  scale.py  velocity_controls.py
src/fennil/app/deck/: __init__.py  builder.py  builder2.py  fault_lines.py  faults.py  mapbox.py  primitives.py  res_compare.py  stations.py  styles.py  tde.py  tooltips.py  vectors.py
src/fennil/app/utils/: __init__.py  data.py
src/fennil/app/viz/: __init__.py  fault_lines.py  fault_proj.py  faults.py  locs.py  mod.py  mog.py  obs.py  res.py  res_compare.py  rot.py  seg.py  slip.py  slip_compare.py  stations.py  str.py  styles.py  tde.py  tri.py  vectors.py
src/fennil/app/viz/fields/: __init__.py  fault_proj.py  locs.py  mod.py  mog.py  obs.py  res.py  res_compare.py  rot.py  seg.py  slip.py  slip_compare.py  str.py  tde.py  tri.py
tests/: test_import.py
